plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

javafx {
    version = "15.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClassName = "com.antonleagre.pokemonsaturn.dataviewer.Main"
    applicationDefaultJvmArgs = [ '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED' ] // we need this for controlsfx to work with JDK9 and above
}

sourceCompatibility = 1.8

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ["src/main/resources"]
            includes = ["**/*.fxml"]
        }
    }
}

